--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@node-escpos/core": "^0.6.0",
-    "@node-escpos/usb-adapter": "^0.3.1"
+    "@node-escpos/usb-adapter": "^0.3.1",
+    "dotenv": "^16.4.5",
+    "mastodon-api": "^1.3.0"
   }
 }
