--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "tsx ./index.ts",
     "mastodot": "tsx ./mastodot.ts",
-    "mastoprint": "tsx ./mastoprint.ts"
+    "mastoprint": "tsx ./mastoprint.ts",
+    "imagetest": "tsx ./image.ts",
+    "texttest": "tsx ./text.ts"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
     "@node-escpos/core": "^0.6.0",
     "@node-escpos/usb-adapter": "^0.3.1",
     "dotenv": "^16.4.5",
-    "mastodon-api": "^1.3.0"
+    "mastodon-api": "^1.3.0",
+    "node-fetch": "^3.3.2",
+    "sharp": "^0.33.4"
   }
 }
