--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@node-escpos/core": "^0.6.0",
     "@node-escpos/usb-adapter": "^0.3.1",
     "dotenv": "^16.4.5",
+    "html-to-text": "^9.0.5",
     "mastodon-api": "^1.3.0",
     "node-fetch": "^3.3.2",
     "sharp": "^0.33.4"
